added footer in html with links to my personal profiles and website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   <body>
     <h1>Welcome to Ninia's AI storyteller 📚</h1>
 
+    <footer>
+      This AI project is coded by
+      <strong
+        ><a href="https://www.linkedin.com/in/nino-antadze/" target="_blank"
+          >Nini Antadze </a
+        >🧚‍♀️</strong
+      >
+      is
+      <a
+        href="https://github.com/niniantadze/AI-Project-Ninias-Storyteller"
+        target="_blank"
+        >open-sourced on 🐱 Github</a
+      >
+      and
+      <a href="https://ninias-ai-storyteller.netlify.app/" target="_blank"
+        >hosted on Netlify </a
+      >!
+    </footer>
     <script src="source/script.js"></script>
   </body>
 </html>
