added basic html structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <link rel="stylesheet" href="source/style.css" />
   </head>
   <body>
-    <h1>Welcome to Ninia's AI storyteller 📚</h1>
+    <header><h1>Ninia's AI storyteller 📚</h1></header>
+
+    <main>
+      <form>
+        <input
+          type="text"
+          name=""
+          id=""
+          placeholder="Enter the topic of short story 🌻"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div id="story">
+        In a quiet forest, Fox Felix discovered a magical flower,
+        <br />
+        granting him the gift of speech. He united animals,
+        <br />
+        bringing laughter to the once-silent woods.
+      </div>
+    </main>
 
     <footer>
       This AI project is coded by
@@ -22,7 +44,7 @@
         target="_blank"
         >open-sourced on 🐱 Github</a
       >
-      and
+      and is
       <a href="https://ninias-ai-storyteller.netlify.app/" target="_blank"
         >hosted on Netlify </a
       >!
