--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Merienda:wght@300;400;500;600;700;800;900&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   </head>
   <body>
     <div class="container">
       <header><h1>Ninia's AI storyteller 🪁</h1></header>
 
       <main>
-        <form>
+        <form id="story-generator-form">
           <input
             class="instructions"
             type="text"
@@ -30,13 +31,7 @@
           />
           <input class="submitButton" type="submit" />
         </form>
-        <div class="story">
-          In a quiet forest, Fox Felix discovered a magical flower,
-          <br />
-          granting him the gift of speech. He united animals,
-          <br />
-          bringing laughter to the once-silent woods.
-        </div>
+        <div class="story" id="story"></div>
       </main>
 
       <footer>
