added api imigration with api key and gave instructions to ai and displayed answer of the story

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -23,7 +24,7 @@
             class="instructions"
             type="text"
             name=""
-            id=""
+            id="user-instructions"
             placeholder="Enter the topic of short story 🌻"
             autofocus
             required
